--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad corporis reiciendis explicabo, quia nam corrupti
-        distinctio asperiores minima. Facilis, quasi!</p>
+        distinctio asperiores minima. Facilis, quasi!.</p>
 </body>
 
 </html>
