--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 
 <body>
     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, aliquid!..</p>
 </body>
 
 </html>
