--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad corporis reiciendis explicabo, quia nam corrupti
         distinctio asperiores minima. Facilis, quasi!...</p>
+    <h2>Lorem ipsum dolor sit amet consectetur.</h2>
 </body>
 
 </html>
