--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad corporis reiciendis explicabo, quia nam corrupti
         distinctio asperiores minima. Facilis, quasi!...</p>
     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    <div class="c1">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, odio?
+    </div>
 </body>
 
 </html>
