--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="c1">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, odio?
     </div>
+    <div class="c2">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, at.
+    </div>
 </body>
 
 </html>
