--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="c2">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, at.
     </div>
+    <div class="c3">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, ducimus.
+    </div>
 </body>
 
 </html>
